# DevSecure

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20240316000000_create_users_table.sql
backend/src/: config.rs  main.rs
backend/src/models/: mod.rs  user.rs
backend/src/services/: auth.rs  mod.rs
docs/: APP_TASKLIST.md  SYSTEM_DESIGN.md  USER_JOURNEY.md
